// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfigurationCard should render correctly - no data 1`] = `
<MemoryRouter>
  <Router
    location={
      Object {
        "hash": "",
        "key": "default",
        "pathname": "/",
        "search": "",
        "state": null,
      }
    }
    navigationType="POP"
    navigator={
      Object {
        "action": "POP",
        "createHref": [Function],
        "createURL": [Function],
        "encodeLocation": [Function],
        "go": [Function],
        "index": 0,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "default",
          "pathname": "/",
          "search": "",
          "state": null,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Connect(ConfigurationCardCore)
      detailLoaded={false}
      extra={Array []}
      handleClick={[Function]}
      hasPackages={true}
      hasProcesses={true}
      hasRepositories={true}
      hasServices={true}
      store={
        Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        }
      }
    >
      <ConfigurationCardCore
        configuration={
          Object {
            "packages": undefined,
            "processes": undefined,
            "repositories": undefined,
            "services": undefined,
          }
        }
        detailLoaded={false}
        dispatch={[Function]}
        extra={Array []}
        handleClick={[Function]}
        hasPackages={true}
        hasProcesses={true}
        hasRepositories={true}
        hasServices={true}
        store={
          Object {
            "clearActions": [Function],
            "dispatch": [Function],
            "getActions": [Function],
            "getState": [Function],
            "replaceReducer": [Function],
            "subscribe": [Function],
          }
        }
      >
        <LoadingCard
          isLoading={true}
          items={
            Array [
              Object {
                "onClick": [Function],
                "singular": "package",
                "target": "installed_packages",
                "title": "Installed packages",
                "value": undefined,
              },
              Object {
                "onClick": [Function],
                "singular": "service",
                "target": "services",
                "title": "Services",
                "value": undefined,
              },
              Object {
                "onClick": [Function],
                "plural": "processes",
                "singular": "process",
                "target": "running_processes",
                "title": "Running processes",
                "value": undefined,
              },
              Object {
                "onClick": [Function],
                "target": "repositories",
                "title": "Repositories",
                "value": undefined,
              },
            ]
          }
          title="Configuration"
        >
          <Card
            ouiaId="system-properties-card"
          >
            <article
              className="pf-c-card"
              data-ouia-component-id="system-properties-card"
              data-ouia-component-type="PF4/Card"
              data-ouia-safe={true}
              id=""
            >
              <CardBody>
                <div
                  className="pf-c-card__body"
                >
                  <Stack
                    hasGutter={true}
                  >
                    <div
                      className="pf-l-stack pf-m-gutter"
                    >
                      <StackItem>
                        <div
                          className="pf-l-stack__item"
                        >
                          <TextContent>
                            <div
                              className="pf-c-content"
                            >
                              <Text
                                component="h1"
                              >
                                <h1
                                  className=""
                                  data-ouia-component-id="OUIA-Generated-Text-1"
                                  data-ouia-component-type="PF4/Text"
                                  data-ouia-safe={true}
                                  data-pf-content={true}
                                >
                                  Configuration
                                </h1>
                              </Text>
                            </div>
                          </TextContent>
                        </div>
                      </StackItem>
                      <StackItem
                        isFilled={true}
                      >
                        <div
                          className="pf-l-stack__item pf-m-fill"
                        >
                          <TextContent>
                            <div
                              className="pf-c-content"
                            >
                              <TextList
                                component="dl"
                              >
                                <dl
                                  className=""
                                >
                                  <TextListItem
                                    component="dt"
                                    data-ouia-component-id="Installed packages title"
                                  >
                                    <dt
                                      className=""
                                      data-ouia-component-id="Installed packages title"
                                    >
                                      Installed packages
                                    </dt>
                                  </TextListItem>
                                  <TextListItem
                                    component="dd"
                                    data-ouia-component-id="Installed packages value"
                                  >
                                    <dd
                                      className=""
                                      data-ouia-component-id="Installed packages value"
                                    >
                                      <Skeleton
                                        size="sm"
                                      >
                                        <Skeleton
                                          className="ins-c-skeleton ins-c-skeleton__sm"
                                        >
                                          <div
                                            className="pf-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                                          >
                                            <span
                                              className="pf-u-screen-reader"
                                            />
                                          </div>
                                        </Skeleton>
                                      </Skeleton>
                                    </dd>
                                  </TextListItem>
                                  <TextListItem
                                    component="dt"
                                    data-ouia-component-id="Services title"
                                  >
                                    <dt
                                      className=""
                                      data-ouia-component-id="Services title"
                                    >
                                      Services
                                    </dt>
                                  </TextListItem>
                                  <TextListItem
                                    component="dd"
                                    data-ouia-component-id="Services value"
                                  >
                                    <dd
                                      className=""
                                      data-ouia-component-id="Services value"
                                    >
                                      <Skeleton
                                        size="sm"
                                      >
                                        <Skeleton
                                          className="ins-c-skeleton ins-c-skeleton__sm"
                                        >
                                          <div
                                            className="pf-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                                          >
                                            <span
                                              className="pf-u-screen-reader"
                                            />
                                          </div>
                                        </Skeleton>
                                      </Skeleton>
                                    </dd>
                                  </TextListItem>
                                  <TextListItem
                                    component="dt"
                                    data-ouia-component-id="Running processes title"
                                  >
                                    <dt
                                      className=""
                                      data-ouia-component-id="Running processes title"
                                    >
                                      Running processes
                                    </dt>
                                  </TextListItem>
                                  <TextListItem
                                    component="dd"
                                    data-ouia-component-id="Running processes value"
                                  >
                                    <dd
                                      className=""
                                      data-ouia-component-id="Running processes value"
                                    >
                                      <Skeleton
                                        size="sm"
                                      >
                                        <Skeleton
                                          className="ins-c-skeleton ins-c-skeleton__sm"
                                        >
                                          <div
                                            className="pf-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                                          >
                                            <span
                                              className="pf-u-screen-reader"
                                            />
                                          </div>
                                        </Skeleton>
                                      </Skeleton>
                                    </dd>
                                  </TextListItem>
                                  <TextListItem
                                    component="dt"
                                    data-ouia-component-id="Repositories title"
                                  >
                                    <dt
                                      className=""
                                      data-ouia-component-id="Repositories title"
                                    >
                                      Repositories
                                    </dt>
                                  </TextListItem>
                                  <TextListItem
                                    component="dd"
                                    data-ouia-component-id="Repositories value"
                                  >
                                    <dd
                                      className=""
                                      data-ouia-component-id="Repositories value"
                                    >
                                      <Skeleton
                                        size="sm"
                                      >
                                        <Skeleton
                                          className="ins-c-skeleton ins-c-skeleton__sm"
                                        >
                                          <div
                                            className="pf-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                                          >
                                            <span
                                              className="pf-u-screen-reader"
                                            />
                                          </div>
                                        </Skeleton>
                                      </Skeleton>
                                    </dd>
                                  </TextListItem>
                                </dl>
                              </TextList>
                            </div>
                          </TextContent>
                        </div>
                      </StackItem>
                    </div>
                  </Stack>
                </div>
              </CardBody>
            </article>
          </Card>
        </LoadingCard>
      </ConfigurationCardCore>
    </Connect(ConfigurationCardCore)>
  </Router>
</MemoryRouter>
=======
  </article>
</DocumentFragment>
>>>>>>> f3af141 (chore(Cards): Convert tests to testing-library)
`;

exports[`ConfigurationCard should render correctly with data 1`] = `
<DocumentFragment>
  <article
    class="pf-c-card"
    data-ouia-component-id="system-properties-card"
    data-ouia-component-type="PF4/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-c-card__body"
    >
      <div
        class="pf-l-stack pf-m-gutter"
      >
        <div
          class="pf-l-stack__item"
        >
          <div
            class="pf-c-content"
          >
            <h1
              class=""
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF4/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              Configuration
            </h1>
          </div>
        </div>
        <div
          class="pf-l-stack__item pf-m-fill"
        >
          <div
            class="pf-c-content"
          >
            <dl
              class=""
            >
              <dt
                class=""
                data-ouia-component-id="Installed packages title"
              >
                Installed packages
              </dt>
              <dd
                class=""
                data-ouia-component-id="Installed packages value"
              >
                <div>
                  <a
                    href="/installed_packages"
                  >
<<<<<<< HEAD
                    <div
                      className="pf-l-stack pf-m-gutter"
                    >
                      <StackItem>
                        <div
                          className="pf-l-stack__item"
                        >
                          <TextContent>
                            <div
                              className="pf-c-content"
                            >
                              <Text
                                component="h1"
                              >
                                <h1
                                  className=""
                                  data-ouia-component-id="OUIA-Generated-Text-2"
                                  data-ouia-component-type="PF4/Text"
                                  data-ouia-safe={true}
                                  data-pf-content={true}
                                >
                                  Configuration
                                </h1>
                              </Text>
                            </div>
                          </TextContent>
                        </div>
                      </StackItem>
                      <StackItem
                        isFilled={true}
                      >
                        <div
                          className="pf-l-stack__item pf-m-fill"
                        >
                          <TextContent>
                            <div
                              className="pf-c-content"
                            >
                              <TextList
                                component="dl"
                              >
                                <dl
                                  className=""
                                >
                                  <TextListItem
                                    component="dt"
                                    data-ouia-component-id="Installed packages title"
                                  >
                                    <dt
                                      className=""
                                      data-ouia-component-id="Installed packages title"
                                    >
                                      Installed packages
                                    </dt>
                                  </TextListItem>
                                  <TextListItem
                                    component="dd"
                                    data-ouia-component-id="Installed packages value"
                                  >
                                    <dd
                                      className=""
                                      data-ouia-component-id="Installed packages value"
                                    >
                                      <div>
                                        <Clickable
                                          onClick={[Function]}
                                          singular="package"
                                          target="installed_packages"
                                          value={1}
                                        >
                                          <Link
                                            to="localhost:3000/example/path/installed_packages"
                                          >
                                            <a
                                              href="localhost:3000/example/path/installed_packages"
                                            >
                                              1 package
                                            </a>
                                          </Link>
                                        </Clickable>
                                      </div>
                                    </dd>
                                  </TextListItem>
                                  <TextListItem
                                    component="dt"
                                    data-ouia-component-id="Services title"
                                  >
                                    <dt
                                      className=""
                                      data-ouia-component-id="Services title"
                                    >
                                      Services
                                    </dt>
                                  </TextListItem>
                                  <TextListItem
                                    component="dd"
                                    data-ouia-component-id="Services value"
                                  >
                                    <dd
                                      className=""
                                      data-ouia-component-id="Services value"
                                    >
                                      <div>
                                        <Clickable
                                          onClick={[Function]}
                                          singular="service"
                                          target="services"
                                          value={1}
                                        >
                                          <Link
                                            to="localhost:3000/example/path/services"
                                          >
                                            <a
                                              href="localhost:3000/example/path/services"
                                            >
                                              1 service
                                            </a>
                                          </Link>
                                        </Clickable>
                                      </div>
                                    </dd>
                                  </TextListItem>
                                  <TextListItem
                                    component="dt"
                                    data-ouia-component-id="Running processes title"
                                  >
                                    <dt
                                      className=""
                                      data-ouia-component-id="Running processes title"
                                    >
                                      Running processes
                                    </dt>
                                  </TextListItem>
                                  <TextListItem
                                    component="dd"
                                    data-ouia-component-id="Running processes value"
                                  >
                                    <dd
                                      className=""
                                      data-ouia-component-id="Running processes value"
                                    >
                                      <div>
                                        <Clickable
                                          onClick={[Function]}
                                          plural="processes"
                                          singular="process"
                                          target="running_processes"
                                          value={1}
                                        >
                                          <Link
                                            to="localhost:3000/example/path/running_processes"
                                          >
                                            <a
                                              href="localhost:3000/example/path/running_processes"
                                            >
                                              1 process
                                            </a>
                                          </Link>
                                        </Clickable>
                                      </div>
                                    </dd>
                                  </TextListItem>
                                  <TextListItem
                                    component="dt"
                                    data-ouia-component-id="Repositories title"
                                  >
                                    <dt
                                      className=""
                                      data-ouia-component-id="Repositories title"
                                    >
                                      Repositories
                                    </dt>
                                  </TextListItem>
                                  <TextListItem
                                    component="dd"
                                    data-ouia-component-id="Repositories value"
                                  >
                                    <dd
                                      className=""
                                      data-ouia-component-id="Repositories value"
                                    >
                                      <div>
                                        <Clickable
                                          onClick={[Function]}
                                          target="repositories"
                                          value="1 enabled"
                                        >
                                          <Link
                                            to="localhost:3000/example/path/repositories"
                                          >
                                            <a
                                              href="localhost:3000/example/path/repositories"
                                            >
                                              1 enabled
                                            </a>
                                          </Link>
                                        </Clickable>
                                      </div>
                                    </dd>
                                  </TextListItem>
                                </dl>
                              </TextList>
                            </div>
                          </TextContent>
                        </div>
                      </StackItem>
                    </div>
                  </Stack>
=======
                    1 package
                  </a>
>>>>>>> f3af141 (chore(Cards): Convert tests to testing-library)
                </div>
              </dd>
              <dt
                class=""
                data-ouia-component-id="Services title"
              >
                Services
              </dt>
              <dd
                class=""
                data-ouia-component-id="Services value"
              >
                <div>
                  <a
                    href="/services"
                  >
                    1 service
                  </a>
                </div>
              </dd>
              <dt
                class=""
                data-ouia-component-id="Running processes title"
              >
                Running processes
              </dt>
              <dd
                class=""
                data-ouia-component-id="Running processes value"
              >
                <div>
                  <a
                    href="/running_processes"
                  >
                    1 process
                  </a>
                </div>
              </dd>
              <dt
                class=""
                data-ouia-component-id="Repositories title"
              >
                Repositories
              </dt>
              <dd
                class=""
                data-ouia-component-id="Repositories value"
              >
                <div>
                  <a
                    href="/repositories"
                  >
                    1 enabled
                  </a>
                </div>
              </dd>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`ConfigurationCard should render enabled/disabled 1`] = `
<DocumentFragment>
  <article
    class="pf-c-card"
    data-ouia-component-id="system-properties-card"
    data-ouia-component-type="PF4/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-c-card__body"
    >
      <div
        class="pf-l-stack pf-m-gutter"
      >
        <div
          class="pf-l-stack__item"
        >
          <div
            class="pf-c-content"
          >
            <h1
              class=""
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF4/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              Configuration
            </h1>
          </div>
        </div>
        <div
          class="pf-l-stack__item pf-m-fill"
        >
          <div
            class="pf-c-content"
          >
            <dl
              class=""
            >
              <dt
                class=""
                data-ouia-component-id="Installed packages title"
              >
                Installed packages
              </dt>
              <dd
                class=""
                data-ouia-component-id="Installed packages value"
              >
                <div>
                  <a
                    href="/installed_packages"
                  >
<<<<<<< HEAD
                    <div
                      className="pf-l-stack pf-m-gutter"
                    >
                      <StackItem>
                        <div
                          className="pf-l-stack__item"
                        >
                          <TextContent>
                            <div
                              className="pf-c-content"
                            >
                              <Text
                                component="h1"
                              >
                                <h1
                                  className=""
                                  data-ouia-component-id="OUIA-Generated-Text-3"
                                  data-ouia-component-type="PF4/Text"
                                  data-ouia-safe={true}
                                  data-pf-content={true}
                                >
                                  Configuration
                                </h1>
                              </Text>
                            </div>
                          </TextContent>
                        </div>
                      </StackItem>
                      <StackItem
                        isFilled={true}
                      >
                        <div
                          className="pf-l-stack__item pf-m-fill"
                        >
                          <TextContent>
                            <div
                              className="pf-c-content"
                            >
                              <TextList
                                component="dl"
                              >
                                <dl
                                  className=""
                                >
                                  <TextListItem
                                    component="dt"
                                    data-ouia-component-id="Installed packages title"
                                  >
                                    <dt
                                      className=""
                                      data-ouia-component-id="Installed packages title"
                                    >
                                      Installed packages
                                    </dt>
                                  </TextListItem>
                                  <TextListItem
                                    component="dd"
                                    data-ouia-component-id="Installed packages value"
                                  >
                                    <dd
                                      className=""
                                      data-ouia-component-id="Installed packages value"
                                    >
                                      <div>
                                        <Clickable
                                          onClick={[Function]}
                                          singular="package"
                                          target="installed_packages"
                                          value={1}
                                        >
                                          <Link
                                            to="localhost:3000/example/path/installed_packages"
                                          >
                                            <a
                                              href="localhost:3000/example/path/installed_packages"
                                            >
                                              1 package
                                            </a>
                                          </Link>
                                        </Clickable>
                                      </div>
                                    </dd>
                                  </TextListItem>
                                  <TextListItem
                                    component="dt"
                                    data-ouia-component-id="Services title"
                                  >
                                    <dt
                                      className=""
                                      data-ouia-component-id="Services title"
                                    >
                                      Services
                                    </dt>
                                  </TextListItem>
                                  <TextListItem
                                    component="dd"
                                    data-ouia-component-id="Services value"
                                  >
                                    <dd
                                      className=""
                                      data-ouia-component-id="Services value"
                                    >
                                      <div>
                                        <Clickable
                                          onClick={[Function]}
                                          singular="service"
                                          target="services"
                                          value={1}
                                        >
                                          <Link
                                            to="localhost:3000/example/path/services"
                                          >
                                            <a
                                              href="localhost:3000/example/path/services"
                                            >
                                              1 service
                                            </a>
                                          </Link>
                                        </Clickable>
                                      </div>
                                    </dd>
                                  </TextListItem>
                                  <TextListItem
                                    component="dt"
                                    data-ouia-component-id="Running processes title"
                                  >
                                    <dt
                                      className=""
                                      data-ouia-component-id="Running processes title"
                                    >
                                      Running processes
                                    </dt>
                                  </TextListItem>
                                  <TextListItem
                                    component="dd"
                                    data-ouia-component-id="Running processes value"
                                  >
                                    <dd
                                      className=""
                                      data-ouia-component-id="Running processes value"
                                    >
                                      <div>
                                        <Clickable
                                          onClick={[Function]}
                                          plural="processes"
                                          singular="process"
                                          target="running_processes"
                                          value={1}
                                        >
                                          <Link
                                            to="localhost:3000/example/path/running_processes"
                                          >
                                            <a
                                              href="localhost:3000/example/path/running_processes"
                                            >
                                              1 process
                                            </a>
                                          </Link>
                                        </Clickable>
                                      </div>
                                    </dd>
                                  </TextListItem>
                                  <TextListItem
                                    component="dt"
                                    data-ouia-component-id="Repositories title"
                                  >
                                    <dt
                                      className=""
                                      data-ouia-component-id="Repositories title"
                                    >
                                      Repositories
                                    </dt>
                                  </TextListItem>
                                  <TextListItem
                                    component="dd"
                                    data-ouia-component-id="Repositories value"
                                  >
                                    <dd
                                      className=""
                                      data-ouia-component-id="Repositories value"
                                    >
                                      <div>
                                        <Clickable
                                          onClick={[Function]}
                                          target="repositories"
                                          value="1 enabled / 1 disabled"
                                        >
                                          <Link
                                            to="localhost:3000/example/path/repositories"
                                          >
                                            <a
                                              href="localhost:3000/example/path/repositories"
                                            >
                                              1 enabled / 1 disabled
                                            </a>
                                          </Link>
                                        </Clickable>
                                      </div>
                                    </dd>
                                  </TextListItem>
                                </dl>
                              </TextList>
                            </div>
                          </TextContent>
                        </div>
                      </StackItem>
                    </div>
                  </Stack>
=======
                    1 package
                  </a>
>>>>>>> f3af141 (chore(Cards): Convert tests to testing-library)
                </div>
              </dd>
              <dt
                class=""
                data-ouia-component-id="Services title"
              >
                Services
              </dt>
              <dd
                class=""
                data-ouia-component-id="Services value"
              >
                <div>
                  <a
                    href="/services"
                  >
                    1 service
                  </a>
                </div>
              </dd>
              <dt
                class=""
                data-ouia-component-id="Running processes title"
              >
                Running processes
              </dt>
              <dd
                class=""
                data-ouia-component-id="Running processes value"
              >
                <div>
                  <a
                    href="/running_processes"
                  >
                    1 process
                  </a>
                </div>
              </dd>
              <dt
                class=""
                data-ouia-component-id="Repositories title"
              >
                Repositories
              </dt>
              <dd
                class=""
                data-ouia-component-id="Repositories value"
              >
                <div>
                  <a
                    href="/repositories"
                  >
                    1 enabled / 1 disabled
                  </a>
                </div>
              </dd>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`ConfigurationCard should render extra 1`] = `
<DocumentFragment>
  <article
    class="pf-c-card"
    data-ouia-component-id="system-properties-card"
    data-ouia-component-type="PF4/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-c-card__body"
    >
      <div
        class="pf-l-stack pf-m-gutter"
      >
        <div
          class="pf-l-stack__item"
        >
          <div
            class="pf-c-content"
          >
            <h1
              class=""
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF4/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              Configuration
            </h1>
          </div>
        </div>
        <div
          class="pf-l-stack__item pf-m-fill"
        >
          <div
            class="pf-c-content"
          >
            <dl
              class=""
            >
              <dt
                class=""
                data-ouia-component-id="Installed packages title"
              >
                Installed packages
              </dt>
              <dd
                class=""
                data-ouia-component-id="Installed packages value"
              >
                <div>
                  <a
                    href="/installed_packages"
                  >
<<<<<<< HEAD
                    <div
                      className="pf-l-stack pf-m-gutter"
                    >
                      <StackItem>
                        <div
                          className="pf-l-stack__item"
                        >
                          <TextContent>
                            <div
                              className="pf-c-content"
                            >
                              <Text
                                component="h1"
                              >
                                <h1
                                  className=""
                                  data-ouia-component-id="OUIA-Generated-Text-13"
                                  data-ouia-component-type="PF4/Text"
                                  data-ouia-safe={true}
                                  data-pf-content={true}
                                >
                                  Configuration
                                </h1>
                              </Text>
                            </div>
                          </TextContent>
                        </div>
                      </StackItem>
                      <StackItem
                        isFilled={true}
                      >
                        <div
                          className="pf-l-stack__item pf-m-fill"
                        >
                          <TextContent>
                            <div
                              className="pf-c-content"
                            >
                              <TextList
                                component="dl"
                              >
                                <dl
                                  className=""
                                >
                                  <TextListItem
                                    component="dt"
                                    data-ouia-component-id="Installed packages title"
                                  >
                                    <dt
                                      className=""
                                      data-ouia-component-id="Installed packages title"
                                    >
                                      Installed packages
                                    </dt>
                                  </TextListItem>
                                  <TextListItem
                                    component="dd"
                                    data-ouia-component-id="Installed packages value"
                                  >
                                    <dd
                                      className=""
                                      data-ouia-component-id="Installed packages value"
                                    >
                                      <div>
                                        <Clickable
                                          onClick={[Function]}
                                          singular="package"
                                          target="installed_packages"
                                          value={1}
                                        >
                                          <Link
                                            to="localhost:3000/example/path/installed_packages"
                                          >
                                            <a
                                              href="localhost:3000/example/path/installed_packages"
                                            >
                                              1 package
                                            </a>
                                          </Link>
                                        </Clickable>
                                      </div>
                                    </dd>
                                  </TextListItem>
                                  <TextListItem
                                    component="dt"
                                    data-ouia-component-id="Services title"
                                  >
                                    <dt
                                      className=""
                                      data-ouia-component-id="Services title"
                                    >
                                      Services
                                    </dt>
                                  </TextListItem>
                                  <TextListItem
                                    component="dd"
                                    data-ouia-component-id="Services value"
                                  >
                                    <dd
                                      className=""
                                      data-ouia-component-id="Services value"
                                    >
                                      <div>
                                        <Clickable
                                          onClick={[Function]}
                                          singular="service"
                                          target="services"
                                          value={1}
                                        >
                                          <Link
                                            to="localhost:3000/example/path/services"
                                          >
                                            <a
                                              href="localhost:3000/example/path/services"
                                            >
                                              1 service
                                            </a>
                                          </Link>
                                        </Clickable>
                                      </div>
                                    </dd>
                                  </TextListItem>
                                  <TextListItem
                                    component="dt"
                                    data-ouia-component-id="Running processes title"
                                  >
                                    <dt
                                      className=""
                                      data-ouia-component-id="Running processes title"
                                    >
                                      Running processes
                                    </dt>
                                  </TextListItem>
                                  <TextListItem
                                    component="dd"
                                    data-ouia-component-id="Running processes value"
                                  >
                                    <dd
                                      className=""
                                      data-ouia-component-id="Running processes value"
                                    >
                                      <div>
                                        <Clickable
                                          onClick={[Function]}
                                          plural="processes"
                                          singular="process"
                                          target="running_processes"
                                          value={1}
                                        >
                                          <Link
                                            to="localhost:3000/example/path/running_processes"
                                          >
                                            <a
                                              href="localhost:3000/example/path/running_processes"
                                            >
                                              1 process
                                            </a>
                                          </Link>
                                        </Clickable>
                                      </div>
                                    </dd>
                                  </TextListItem>
                                  <TextListItem
                                    component="dt"
                                    data-ouia-component-id="Repositories title"
                                  >
                                    <dt
                                      className=""
                                      data-ouia-component-id="Repositories title"
                                    >
                                      Repositories
                                    </dt>
                                  </TextListItem>
                                  <TextListItem
                                    component="dd"
                                    data-ouia-component-id="Repositories value"
                                  >
                                    <dd
                                      className=""
                                      data-ouia-component-id="Repositories value"
                                    >
                                      <div>
                                        <Clickable
                                          onClick={[Function]}
                                          target="repositories"
                                          value="1 enabled"
                                        >
                                          <Link
                                            to="localhost:3000/example/path/repositories"
                                          >
                                            <a
                                              href="localhost:3000/example/path/repositories"
                                            >
                                              1 enabled
                                            </a>
                                          </Link>
                                        </Clickable>
                                      </div>
                                    </dd>
                                  </TextListItem>
                                  <TextListItem
                                    component="dt"
                                    data-ouia-component-id="something title"
                                  >
                                    <dt
                                      className=""
                                      data-ouia-component-id="something title"
                                    >
                                      something
                                    </dt>
                                  </TextListItem>
                                  <TextListItem
                                    component="dd"
                                    data-ouia-component-id="something value"
                                  >
                                    <dd
                                      className=""
                                      data-ouia-component-id="something value"
                                    >
                                      test
                                    </dd>
                                  </TextListItem>
                                  <TextListItem
                                    component="dt"
                                    data-ouia-component-id="with click title"
                                  >
                                    <dt
                                      className=""
                                      data-ouia-component-id="with click title"
                                    >
                                      with click
                                    </dt>
                                  </TextListItem>
                                  <TextListItem
                                    component="dd"
                                    data-ouia-component-id="with click value"
                                  >
                                    <dd
                                      className=""
                                      data-ouia-component-id="with click value"
                                    >
                                      <div>
                                        <Clickable
                                          onClick={[Function]}
                                          value="1 tests"
                                        >
                                          <Link
                                            to="localhost:3000/example/path/undefined"
                                          >
                                            <a
                                              href="localhost:3000/example/path/undefined"
                                            >
                                              1 tests
                                            </a>
                                          </Link>
                                        </Clickable>
                                      </div>
                                    </dd>
                                  </TextListItem>
                                </dl>
                              </TextList>
                            </div>
                          </TextContent>
                        </div>
                      </StackItem>
                    </div>
                  </Stack>
=======
                    1 package
                  </a>
>>>>>>> f3af141 (chore(Cards): Convert tests to testing-library)
                </div>
              </dd>
              <dt
                class=""
                data-ouia-component-id="Services title"
              >
                Services
              </dt>
              <dd
                class=""
                data-ouia-component-id="Services value"
              >
                <div>
                  <a
                    href="/services"
                  >
                    1 service
                  </a>
                </div>
              </dd>
              <dt
                class=""
                data-ouia-component-id="Running processes title"
              >
                Running processes
              </dt>
              <dd
                class=""
                data-ouia-component-id="Running processes value"
              >
                <div>
                  <a
                    href="/running_processes"
                  >
                    1 process
                  </a>
                </div>
              </dd>
              <dt
                class=""
                data-ouia-component-id="Repositories title"
              >
                Repositories
              </dt>
              <dd
                class=""
                data-ouia-component-id="Repositories value"
              >
                <div>
                  <a
                    href="/repositories"
                  >
                    1 enabled
                  </a>
                </div>
              </dd>
              <dt
                class=""
                data-ouia-component-id="something title"
              >
                something
              </dt>
              <dd
                class=""
                data-ouia-component-id="something value"
              >
                test
              </dd>
              <dt
                class=""
                data-ouia-component-id="with click title"
              >
                with click
              </dt>
              <dd
                class=""
                data-ouia-component-id="with click value"
              >
                <div>
                  <a
                    href="/undefined"
                  >
                    1 tests
                  </a>
                </div>
              </dd>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </article>
</DocumentFragment>
`;
